# adjoint_samplers

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt  train.py
adjoint_samplers/: train_loop.py
adjoint_samplers/components/: buffer.py  evaluator.py  matcher.py  model.py  sde.py  state_cost.py  term_cost.py
adjoint_samplers/energies/: __init__.py  base_energy.py  dist_energy.py  double_well_energy.py  lennard_jones_energy.py  scine_energy.py  scine_hessian_batch.py
adjoint_samplers/optimization/: scine_ase_calc.py
adjoint_samplers/utils/: align_unordered_mols.py  ase_utils.py  clustering.py  dist_utils.py  distributed_mode.py  eval_utils.py  frequency_analysis.py  frequency_analysis_2d.py  graph_utils.py  logging_utils.py  train_utils.py
configs/: train.yaml
configs/c/: debug.yaml
configs/experiment/: c3h4_asbs.yaml  demo_asbs.yaml  demo_memoryless_soc.yaml  demo_nonmemoryless_soc.yaml  dw2_as.yaml  dw2_asbs.yaml  dw4_as.yaml  dw4_asbs.yaml  isopropanol_asbs.yaml  lj13_as.yaml  lj13_asbs.yaml  (+2 more)
data/: t1x_isopropanol_C3H80_minima_scine_bfgs.lmdb  t1x_isopropanol_C3H80_ts_scine_sella.lmdb  t1x_isopropanol_C3H8O_triplets.lmdb
docs/: gad.md  sgad2d_documentation.md
play/: export_transition1x_isopropanol.py  plot_from_coords.py  plot_gad.py  plot_mol_example.py  plot_source_distributions.py  rmsd_noise_scaling.py  run_bfgs_scine_t1x.py  run_sella_scine_t1x.py  test_render_xyz.py
scripts/: demo.sh  download.sh  dw4.sh  killarney.sh  killarney_2xh100.sh  killarney_h100.sh  lj13.sh  lj55.sh
(+28 files in other folders)
